# pystackw11

./: .coverage  README.md  pyproject.toml
backend/: manage.py  settings.py
backend/docs/: aula1.md  aula3.md
backend/startup/: settings.py  urls.py
backend/startup/empresarios/: admin.py  apps.py  models.py  urls.py  views.py
backend/startup/empresarios/migrations/: 0001_initial.py  0002_metricas.py
backend/startup/empresarios/templates/empresarios/: cadastrar_empresa.html  cadastrar_empresas.html  empresa.html  listar_empresas.html
backend/startup/investidores/: apps.py  urls.py  views.py
backend/startup/investidores/templates/investidores/: sugestao.html  ver_empresa.html
backend/startup/templates/base/: base.html
backend/startup/usuarios/: apps.py  urls.py  views.py
backend/startup/usuarios/templates/usuarios/: cadastro.html  login.html
